# mics_cvia_spark_project

./: .gitignore  404.html  LICENSE  README.md  environment.yml  hpc_yolo_train.sh  index.html  losses.py  main.py  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
1.installation/: index.html
2.usage/: index.html
3.hpc/: index.html
config/: settings.yaml
docs/: 1.installation.md  2.usage.md  3.hpc.md  ToDo.md  docs.md  index.md  todo.md
notebooks/: visualize_data.ipynb
results/: results.csv  submission.csv
scripts/: combine_yolo_rt.py  compare_results.py  maskrcnn_train.sh  rtdert_spark_test.sh  rtdert_spark_train.sh  yolo11x_spark_test.sh  yolo11x_spark_train.sh  yolo11x_spark_val.sh
search/: search_index.json
spark/: losses.py  metrics.py  settings.py  tools.py
spark/cli/: fetch.py  generate.py  pipeline.py
spark/converters/: labels.py
spark/generators/: yolo_dataset.py
spark/pipelines/: maskrcnn.py  pipeline.py  rtdetr.py  yolo.py  yolort.py
spark/utils/: __init__.py  bbox.py  bbox_mean.py  dataset.py  dataset_converter.py  mask.py  transforms.py  yolo_metrics.py
spark/viz/: spark2.py
tests/: test_converters.py
