[project]
name = "mics-cvia-spark-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-image>=0.24.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "typer>=0.14.0",
    "ultralytics>=8.3.23",
]
